--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: '.\src\site'
+          path: './src/site'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
